// Original file: src/common/grpc/proto/chat.proto


export interface ChatMessageResponse {
  'messageId'?: (string);
  'senderId'?: (string);
  'content'?: (string);
  'timestamp'?: (string);
}

export interface ChatMessageResponse__Output {
  'messageId': (string);
  'senderId': (string);
  'content': (string);
  'timestamp': (string);
}
