// Original file: src/common/grpc/proto/chat.proto


export interface GroupResponse {
  'groupId'?: (string);
  'groupName'?: (string);
  'memberIds'?: (string)[];
  'createdAt'?: (string);
}

export interface GroupResponse__Output {
  'groupId': (string);
  'groupName': (string);
  'memberIds': (string)[];
  'createdAt': (string);
}
